test/bad/arrays/comprehension06.px

[x for x in 0...10 step true]
